<resources>
    <string name="app_name">Friend Finder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_reload">Reload</string>


    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_user_id_provided">No user id provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login_title">Log in</string>
    <string name="registration_title">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_log_in">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_email">This email is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_no_match">Passwords do not match</string>
    <string name="error_email_taken">Email taken</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_over_max_length">Value is too long</string>
    <string name="action_register">Register</string>
    <string name="registration_first_name">First name</string>
    <string name="registration_last_name">Last name</string>
    <string name="login_show_password">Show password</string>
    <string name="login_remember">Remember me</string>
    <string name="login_forgot_password">Forgot your password?</string>

    <!-- Strings related to exit application alert dialog -->
    <string name="alert_dialog_exit_application_title">Confirm Exit</string>
    <string name="alert_dialog_exit_application_msg">Do you want to quit the application?</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="alert_dialog_location_permission_title">Location Permission</string>
    <string name="alert_dialog_location_permission_msg">Location permission is needed for
        FriendFinder to work properly. Without it this application will terminate
    </string>
    <string name="alert_dialog_button_terminate">Terminate</string>
    <string name="alert_dialog_button_grant">Grant</string>

    <string name="alert_dialog_force_exit_title">No Permissions</string>
    <string name="alert_dialog_force_exit_msg">FriendFinder requires certain permissions to work.
        These permissions has been denied. This app does not work without them. To use this app
        navigate to Settings > Apps > FriendFinder and grant permissions needed.
    </string>

    <string name="alert_dialog_location_turned_off_title">Location turned off</string>
    <string name="alert_dialog_location_turned_off_msg">FriendFinder needs Location services to
        work. Navigate to settings and turn location on to use FriendFinder.
    </string>


    <string name="drawer_map">Map</string>
    <string name="drawer_manage">Manage Circle</string>
    <string name="drawer_circle">Circle</string>
    <string name="drawer_circle_create">Create</string>
    <string name="drawer_circle_choose">Change</string>
    <string name="drawer_circle_join_requests">Invites</string>
    <string name="drawer_logout">Log out</string>


    <string name="circle_friend_email">Email</string>
    <string name="circle_add_friend">Add Friend</string>
    <string name="ime_add_friend">Add Friend</string>


    <string name="circle_name">Name</string>
    <string name="circle_create">Create Circle</string>
    <string name="no_join_requests">No invites!</string>
    <string name="not_member_of_circle">Create or join a circle!</string>
    <string name="circle_no_other_members">Circle is empty!</string>
    <string name="cd_circle_settings">Settings</string>
    <string name="cd_circle_confirm_invite">Confirm invite</string>
    <string name="cd_circle_decline_invite">Decline invite</string>
    <string name="cd_circle_remove_member">Remove member</string>

    <string name="circle_remove_current_user">Leave Circle</string>
    <string name="circle_delete">Delete Circle</string>

    <string name="loading">Loading...</string>

    <string name="title_invites">Invites</string>
    <string name="title_choose_group">My Circles</string>
    <string name="title_create_circle">Create Circle</string>

</resources>
