<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.AuthenticationFragment"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"/>

    <TextView
        android:id="@+id/authentication_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textColor="#737373"
        android:textSize="40sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/action_log_in"
        android:textColor="#FFF"
        android:background="#4db6ac"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/open_log_in"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/action_register"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#4db6ac"
        android:gravity="center"
        android:id="@+id/open_registration"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"/>
</LinearLayout>
