<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".circle.AddFriendFragment" >

    <ProgressBar
        android:id="@+id/add_friend_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/add_friend_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_friend_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circle_friend_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeActionId="@+id/ime_add_friend"
                android:imeActionLabel="@string/ime_add_friend"
                android:imeOptions="actionUnspecified" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_friend_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/circle_add_friend"
            android:textColor="#FFF"
            android:background="#4db6ac"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>